Fix spacing-base when line height is relative

--- a/src/_L2-sizing.scss
+++ b/src/_L2-sizing.scss
@@ -16,7 +16,7 @@ $line-heights: $body-line-height-factor !default;
   $line-heights: append($line-heights, (length($line-heights) + 1) * ($min-line-height-factor - $body-line-height-factor) / 5 + (6 * $body-line-height-factor - $min-line-height-factor) / 5);
 }
 
-$spacing-base: font-size-rem(nth($line-heights, 1)) !default;
+$spacing-base: if(unitless(nth($line-heights, 1)), nth($line-heights, 1) * nth($font-sizes, 1), nth($line-heights, 1)) !default;
 
 @import "L1-reset";
 
